Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.3 (unreleased)

    Bugs fixed

      - Collector #2289: restored compatibility with PTProfiler
    
      - No longer opens a zodb connection every time a ProductDispatcher
        is looked up.

      - Collector #2288: @ and + should not be quoted when forming
        request URLs in BaseRequest and HTTPRequest

      - Undeprecated 'zLOG', which will remain a backward-compatibility
        shim for the Python logging module.

      - PageTemplate/ZRPythonExpr.py: expressions represented as unicode string
        caused UnicodeDecodeErrors. 

  Zope 2.10.2 (2007/01/26)

    Bugs fixed

      - Updated Zope 3 to bugfix release 3.3.1.

      - Collector #2261: Acquisition when creating objects via Webdav.

      - Collector #2269: fixed broken FTP support for ZPT

  Zope 2.10.2 beta 1 (2007/01/14)

    Bugs fixed

      - Fixed Collector #2190: Calls to
        zope.security.management.checkPermission aren't rerouted to
        Zope 2's security policy.

        NOTE: If you already have a Zope 2.10 instance running, you
        will either have to recreate it or add the following lines to
        the end of the etc/site.zcml file::

          <securityPolicy
                component="Products.Five.security.FiveSecurityPolicy" />

      - Fixed Collector #2223: Evaluation of booleans in TALES and the
        'default' variable.

      - Reverted backward-incompatible fix for Collector #2191.

      - Fixed the creation of lib/python/Zope2/version.txt

      - added Python 2.4.4 as optimal Python version to 'configure'

      - the ZopePageTemplate implementation now uses unicode
        internally.  Non-unicode instances are migrated on-the-fly to
        unicode. However this will work only properly for ZPT
        instances formerly encoded as utf-8 or ISO-8859-15. For other