@@ -8,6 +8,10 @@ Zope Changes
 
     Bugs fixed
 
+      - Protected various security mutators with a new postonly decorator.
+        The decorator limits method publishing to POST requests only, and
+        is a backport from Zope 2.11's requestmethod decorator factory.
+
       - Collector #2289: restored compatibility with PTProfiler
     
       - No longer opens a zodb connection every time a ProductDispatcher
